--- a/app/src/main/res/layout/activity_bottom_nav.xml
+++ b/app/src/main/res/layout/activity_bottom_nav.xml
@@ -7,16 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".bottomNavActivity">
 
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/title_home"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -30,24 +20,12 @@
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/navigation" />
 
-    <FrameLayout
-        android:id="@+id/home_fragment"
-        android:name="codepath.kaughlinpractice.kaughlin_insta.my_fragments.home"
-        android:layout_width="382dp"
-        android:layout_height="506dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        >
 
-    <fragment
+    <FrameLayout
         android:id="@+id/flContainer"
-        android:name="codepath.kaughlinpractice.kaughlin_insta.my_fragments.home"
-        android:layout_width="432dp"
-        android:layout_height="541dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     </FrameLayout>
+
 
 </android.support.constraint.ConstraintLayout>
