--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -10,6 +10,7 @@
         android:layout_height="330dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginTop="57dp"
         app:srcCompat="@android:color/black" />
 
     <TextView
@@ -55,6 +56,14 @@
         android:layout_toEndOf="@+id/ivComment"
         android:layout_marginLeft="15dp"
         app:srcCompat="@drawable/ufi_new_direct" />
+
+    <TextView
+        android:id="@+id/tvTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/ivPostImage"
+        android:text="TextView" />
 
 
 </RelativeLayout>
