--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_marginBottom="5dp"
+    android:layout_width="match_parent" android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/ivPostImage"
@@ -60,8 +61,8 @@
 
     <ImageView
         android:id="@+id/ivShare"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_below="@+id/ivPostImage"
         android:layout_toEndOf="@+id/ivComment"
         android:layout_marginLeft="15dp"
@@ -82,6 +83,14 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         app:srcCompat="@android:color/black" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/ivPostImage"
+        app:srcCompat="@drawable/ufi_save" />
 
 
 </RelativeLayout>
